--- a/.github/workflows/build-gradle-project.yml
+++ b/.github/workflows/build-gradle-project.yml
@@ -13,3 +13,8 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verifying tests
+        run: ./gradlew test
