--- a/.github/workflows/build-gradle-project.yml
+++ b/.github/workflows/build-gradle-project.yml
@@ -16,5 +16,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Verifying tests
         run: ./gradlew test
